--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "uuid": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
