--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.1",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.4.0",
     "redux-thunk": "^2.2.0",
     "uuid": "^3.1.0"
   },
