--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "date-fns": "^1.29.0",
     "fetch-intercept": "^2.2.3",
+    "form-serialize": "^0.7.2",
     "lodash": "^4.17.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
