--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.0",
+    "@fortawesome/fontawesome-free-solid": "^5.0.2",
+    "@fortawesome/react-fontawesome": "^0.0.17",
     "date-fns": "^1.29.0",
     "fetch-intercept": "^2.2.3",
     "form-serialize": "^0.7.2",
     "lodash": "^4.17.4",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.10",
     "react-redux": "^5.0.6",
